# My_Repo

./: README.md  main.c
Desktop/Taller_java/.metadata/: version.ini
Desktop/Taller_java/Figuras/: .project
Estructura_Datos/: .gitignore
Estructura_Datos/Arboles/Practica 5/: func.c  header.h  main.c
Estructura_Datos/Arboles/Practica 7/: a.out  func.c  header.h  main.c
Estructura_Datos/Arboles/Taller 5/: a.out  func.c  header.h  main.c
Estructura_Datos/Arboles/Taller 6/: func.c  header.h  main.c
Estructura_Datos/Arboles/Taller 7/: func.c  header.h  main.c
Estructura_Datos/Colas/Practica 4/: a.out  func.c  header.h  main.c
Estructura_Datos/Colas/Taller 4/: func.c  header.h  main.c
Estructura_Datos/ColasPrioridad/Practica 8/: func.c  header.h  main.c
Estructura_Datos/Examenes/: examen1.c
Estructura_Datos/HashTables/Practica10/: Hash.h  Main.c  Movie.c  Movie.h  func.c  header.h
Estructura_Datos/Heaps/Practica 9/: a.out  func.c  header.h  main.c
Estructura_Datos/Listas_enlazadas/Practica 1/: Practica_1.c  Practica_1_funciones.c  a.out  practica_1_header.h
Estructura_Datos/Listas_enlazadas/Taller 1/: a.out  taller1.c  taller1_funciones.c  taller1_headers.h
Estructura_Datos/Pilas/Practica 3/: a.out  func.c  header.h  main.c
Estructura_Datos/Pilas/Taller 3/: a.out  func.c  header.h  main.c
Estructuras de datos/Pilas/: a.out  header.h
Estructuras de datos/listas doblemente enlazadas/: func.c  header.h  main.c
My_tic_tac_toe/: CMakeLists.txt  README.md
My_tic_tac_toe/include/: game.h  grid.h  player.h  util.h
My_tic_tac_toe/src/: util.c
(+102 files in other folders)
